@@ -1,13 +1,14 @@
 
 Changes in JMurmel-1.4.2 relative to JMurmel-1.4.1
 
- * fixed backquote forms with vector- and hashliterals 
-
  * changed write, writeln, lnwrite, format, format-locale
    to also accept an adjustable string as destination
  * changed log to accept a second optional parameter
+ * added the reader macro #R
 
  * mlib: added string-subseq, with-output-to-string
+
+ * fixed backquote forms with vector- and hashliterals 
 
 
 Changes in JMurmel-1.4.1 relative to JMurmel-1.4
